src/styles.css
/* You can add global styles to this file, and also import other style files */

html {
    overflow-y: auto;
}

.btn-xs {
    padding: .25rem .4rem;
    font-size: .875rem;
    line-height: .5;
    border-radius: .2rem;
}

.voted {
    background: #007bff;
}

.previewPic {
    max-width: 100%;
    border-radius: 5%;
}

.font-4 {
    font-size: 4px
}

.font-10 {
    font-size: 10px;
}

.font-12 {
    font-size: 12px;
}

.font-24 {
    font-size: 24px;
}

.text-red {
    color: red;
    top: 0px;
    right: 25%;
}

@media (max-width: 767.98px) {
    .xs-h-50 {
        height: 50% !important;
    }

    .xs-w-25 {
        width: 25% !important;
    }

    .xs-w-15 {
        width: 15% !important;
    }

    .xs-w-100 {
        width: 100% !important;
    }

    .font-10 {
        font-size: 6px;
    }

    .font-12 {
        font-size: 10px;
    }

    .font-24 {
        font-size: 18px;
    }
}

@media(max-width: 768px) {
    body {
        font-size: 12px;
    }
}

.text-overflow div {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.text-overflow div:hover {
    overflow: visible;
    white-space: pre-wrap;
    word-break: break-all;
}

.overflow-hidden {
    overflow: hidden;
}

.overflow-hidden:hover a {
    display: inline-flex !important;
}

.upright-corner {
    position: absolute;
    top: 0px;
    right: 0px;
}

.hover-high-light:hover {
    background-color: rgb(253, 249, 229);
}

